# doc/swagger.json
@@ -519,6 +519,78 @@
 				]
 			}
 		},
+		"/photo/update/{id}": {
+			"patch": {
+				"summary": "Update the photo by changing the album that the photo must be including",
+				"tags": ["Photo"],
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"description": "ID of the photo to update",
+						"required": true,
+						"type": "string"
+					},
+					{
+						"name": "body",
+						"in": "body",
+						"description": "photo to be updated ",
+						"schema": {
+							"$ref": "#/definitions/photo"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Photo updated successfully"
+					},
+					"404": {
+						"description": "Photo not found"
+					}
+				},
+				"security": [
+					{
+						"apiKeyAuth": []
+					}
+				]
+			}
+		},
+		"/photo/replace/{id}": {
+			"patch": {
+				"summary": "Replace a photo in an album",
+				"tags": ["Photo"],
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"description": "ID of the album to update",
+						"required": true,
+						"type": "string"
+					},
+					{
+						"name": "image",
+						"in": "formData",
+						"description": "Photo file",
+						"required": true,
+						"type": "file"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Phooto replaced successfully"
+					},
+					"404": {
+						"description": "photo not found"
+					}
+				},
+				"security": [
+					{
+						"apiKeyAuth": []
+					}
+				]
+			}
+		},
+
 		"/story/add": {
 			"post": {
 				"summary": "Add a new story",
@@ -880,6 +952,16 @@
                 }
             }
         },
+		"photo":{
+			"type":"object",
+			"properties": {
+				"album":{
+					"type":"string",
+					"required": true,
+					"description":"the id of the album that the photo must be included in"
+				}
+			}
+		},
 
 		"signup": {
 			"type": "object",
